--- a/dailyQ/src/pages/Home.css
+++ b/dailyQ/src/pages/Home.css
@@ -3,12 +3,15 @@
   width: 100%;
   height: 100%;
 }
+.Home button {
+  cursor: pointer;
+}
 
 .HomeMain {
   background-color: white;
  border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  padding : 40px 40px;
+  padding : 40px 20px;
 }
 
 .HomeHeader {
@@ -59,3 +62,38 @@ display: flex;
   color: white;
   border-radius: 20px;
 }
+
+
+
+.HomeMain_Quizbutton {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  width: 100%;
+}
+.HomeMain_Quizbutton button {
+  background-color: white;
+  border : 2px solid transparent;
+ width: fit-content;
+}
+
+.HomeMain_Quizbutton img{
+  width: 100%;
+}
+
+.HomeMain_RankButton {
+  text-align: center;
+}
+.HomeMain_RankButton button {
+  background-color: white;
+  border : 2px solid transparent;
+  width: fit-content;
+}
+
+.HomeMain_RankButton h3{
+  margin-bottom: 5px;
+}
+
+.HomeMain_RankButton img{
+  width: 100%;
+}
+
