--- a/dailyQ/src/pages/Home.css
+++ b/dailyQ/src/pages/Home.css
@@ -11,7 +11,8 @@
   background-color: white;
  border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  padding : 40px 20px;
+  padding : 30px 20px;
+  padding-bottom : 200px;
 }
 
 .HomeHeader {
