--- a/dailyQ/src/pages/Quizcomplete.css
+++ b/dailyQ/src/pages/Quizcomplete.css
@@ -27,7 +27,16 @@
   color : black;
   border-bottom: 2px solid #00664F;
 }
-.QuizMain {
+.QuizMain_fail_fail {
+  padding: 30px 20px;
+}
+.QuizMain_fail_success {
+  display: none;
+}
+.QuizMain_success_fail {
+  display: none;
+}
+.QuizMain_success_success {
   padding: 30px 20px;
 }
 
@@ -55,7 +64,7 @@
 }
 
 .QuizMain_question{
-  margin-top : 30px;
+  margin-top : 50px;
 }
 
 .badge{
@@ -64,7 +73,7 @@
   border-radius: 20px;
   padding:6px 8px;
   color: white;
-  margin-right: 5px;
+  margin-right: 7px;
 }
 
 .question_header{
@@ -90,10 +99,10 @@
 }
 
 .question_button button{
-  padding: 10px 7px;
+  padding: 12px 7px;
   width: 100%;
   background-color: white;
-  border: 1px solid rgb(150,150,150);
+  border: 2px solid rgb(180,180,180);
   border-radius: 20px;
   font-weight: 700;
 }
@@ -106,7 +115,18 @@
 }
 
 .question_footer_header{
-  margin-bottom : 10px;
+  margin-bottom : 20px;
   font-size: 16px;
   font-weight: 600;
+}
+
+.incorrect {
+  border :2px solid red !important;
+}
+.userSelect{
+  border : 2px solid #00664F !important;
+}
+
+.correct {
+  border: 2px solid #00664F !important;
 }
