--- a/dailyQ/src/pages/Person.css
+++ b/dailyQ/src/pages/Person.css
@@ -19,11 +19,12 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top:20px;
 }
 
 .Person_header_img img{
 
-  width: 150px;
+  width: 200px;
 }
 
 
@@ -162,6 +163,7 @@
   font-weight: 600;
   line-height: 1.6;
   font-size:17px;
+  white-space: nowrap;
 }
 .chart{
    object-fit: contain;
@@ -169,7 +171,7 @@
 
 .chart_text {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 10px;
@@ -184,6 +186,7 @@
 }
 
 .average_footer{
+  margin-top:10px;
   display: flex;
   font-size: 11px;
   font-weight: 600;
@@ -221,6 +224,12 @@
   margin-top:20px;
   gap:10px;
 }
+.Person_average2_canvers{
+  width: 250px;
+}
+.Person_average3_canvers{
+  width: 250px;
+}
 
 .Person_average2_top{
    display: flex;
@@ -228,6 +237,8 @@
  font-weight: 600;
  justify-content: flex-end ;
  width: 100%;
+ margin-top:7px;
+ margin-bottom:7px;
 }
 .Person_average3{
    background-color: white;
@@ -248,6 +259,8 @@
  font-weight: 600;
  justify-content: flex-end ;
  width: 100%;
+ margin-top:7px;
+ margin-bottom:7px;
 }
 
 .Person_average3_top span{
