--- a/dailyQ/src/pages/Todayresult.css
+++ b/dailyQ/src/pages/Todayresult.css
@@ -5,6 +5,7 @@
   height: 100%;
   min-height: 100vh;
   padding:0px 30px;
+  padding-bottom: 50px;
 }
 
 .Todayresult_header{
@@ -70,6 +71,8 @@
   margin-top:10px;
   font-weight: 600;
   text-align: center;
+   word-break : keep-all;
+ overflow-wrap: break-word;
 }
 .gohome{
   margin-top:30px;
@@ -91,6 +94,8 @@
 
 .right{
   width: 100%;
+  background-color: rgb(240,240,240);
+  border-radius: 20px;
 }
 
 .right_bar_0{
