--- a/dailyQ/src/pages/Rank.css
+++ b/dailyQ/src/pages/Rank.css
@@ -21,50 +21,72 @@
 }
 
 .myRank_container{
-  margin-top: 10px;
+    margin-top: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 25px 25px;
+  justify-content: space-between; /* ✅ 데스크탑 기준 */
+  flex-wrap: nowrap;
+  padding: 20px;
   background-color: white;
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.4);
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
   border-radius: 20px;
-  height: 110px;
+  gap: 10px;
+}
+
+.container {
+ flex: 1;
+  min-width: 150px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .rank{
-  font-size: 28px;
+ font-size: 32px;
   font-weight: 700;
+  flex-shrink: 0;
+  width: 10%;
+  display: flex;
+  justify-content: center;
 }
 .container_top{
   display: flex;
+  flex:1;
+  justify-content: center;
   align-items: center;
-  margin-bottom:5px;
-  gap:10px;
+  width: 100%;
+  gap: 7px;
+  margin-bottom: 5px;
 }
 
 .top_text{
   font-size: 23px;
   font-weight: 700;
+  word-break: keep-all;
 
 
 }
 
 .top_button{
-  border:none;
+  border: none;
   background-color: #00664F;
-  color:white;
+  color: white;
   border-radius: 10px;
   font-size: 10px;
-  padding:4px 8px;
+  padding: 4px 8px;
 }
 .img{
-  width: fit-content;
+  width: 30%;
+  height: 80px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .myRank_container img{
-  width: 80px;
-  height: 80px;
+   width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -91,6 +113,8 @@
   display: flex;
   justify-content: flex-end;
   margin-top:15px;
+  padding-right: 20px;
   font-size : 10px;
   color: rgb(150,150,150);
 }
+
