--- a/dailyQ/src/components/Footer.css
+++ b/dailyQ/src/components/Footer.css
@@ -1,13 +1,17 @@
 .HomeFooter {
   background-color: white;
- position: absolute;        /* 화면에 고정 */
+ position: fixed;        /* 화면에 고정 */
   bottom: 0;              /* 화면 아래에 위치 */
-  left: 0;
+  left:  50%;
   width: 100%;
   height: 80px;           /* 높이 적당히 조절 */
   background-color: #fff; /* 배경색 */
   display: flex;
+  transform: translateX(-50%);
   min-height: 8vh;
+  width: 100%; /* 또는 부모가 고정 width라면 예: 768px */
+  max-width: 600px;
+  justify-content: center;
   justify-content: space-around;
   align-items: center;
   border-top: 1px solid #ccc; /* 위쪽 테두리로 구분감 */
@@ -30,6 +34,7 @@
 .HomeFooter_button button:hover {
   border : 2px solid rgb(20,20,20);
   border-radius: 5px;
+  
 }
 
 
