--- a/dailyQ/src/pages/Chattingroom.css
+++ b/dailyQ/src/pages/Chattingroom.css
@@ -38,11 +38,10 @@
 }
 
 .Chattingroom_main{
-  height: 100%;
-  width: 100%;
-  padding:20px 20px;
-  overflow-y:auto ;
-  padding-bottom: 160px;
+ flex-grow: 1;
+  overflow-y: auto;
+  padding: 20px;
+  padding-bottom: 200px; /* 입력창 가리는 것 방지 */
 }
 
 .main_another{
@@ -134,10 +133,15 @@ width: 100%;
 }
 
 .chat_input_wrapper {
-  position: relative;
+  position: fixed;
+  bottom: 70px; /* 원하는 만큼 띄우기 (ex. footer 높이 감안) */
+  left: 0;
+  right: 0;
   width: 80%;
-  max-width: 500px; /* 필요시 max-width 지정 */
-  margin: 0 auto; /* 가운데 정렬 */
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 30px 10px;
+  z-index: 1000; /* 다른 요소 위로 올라오게 */
 }
 
 .chat_input {
@@ -159,15 +163,15 @@ width: 100%;
 
 .chat_button {
   position: absolute;
-  right: 0px;
-  top: 45%;
+  right: 10px;
+  top: 48%;
   transform: translateY(-50%);
   border: 2px solid transparent;
   cursor: pointer;
   background-color: #00664F;
   border-radius: 20px;
   color: white;
-  padding: 12px 16px;
+  padding: 12px 18px;
   font-size: 12px;
 }
 
