--- a/dailyQ/src/pages/Home.css
+++ b/dailyQ/src/pages/Home.css
@@ -4,6 +4,7 @@
   height: 100%;
   position: relative;
   min-height: 100vh;
+  padding-bottom:50px;
 }
 .Home button {
   cursor: pointer;
@@ -15,6 +16,7 @@
   border-top-right-radius: 30px;
   padding : 30px 20px;
   min-height: 80vh;
+   padding-bottom:100px;
 }
 
 .HomeHeader {
