--- a/dailyQ/src/pages/Quizcomplete.css
+++ b/dailyQ/src/pages/Quizcomplete.css
@@ -97,7 +97,31 @@
   justify-content: center;
   gap: 20px;
 }
+.question_button2{
+  margin-top: 20px;
+  width: 100%;
+}
 
+.question_button_top2{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.question_button_bottom2{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.question_button2 button{
+  padding: 12px 7px;
+  width: 100%;
+  background-color: white;
+  border: 2px solid rgb(180,180,180);
+  border-radius: 20px;
+  font-weight: 700;
+}
 .question_button button{
   padding: 12px 7px;
   width: 100%;
